--- a/src/components/Places/PlacesList.css
+++ b/src/components/Places/PlacesList.css
@@ -10,11 +10,9 @@
 
 .placesList_placeName {
     font-size: 16px;
-    line-height: 16px;
+    line-height: 20px;
     font-weight: 500;
-    /*height: 32px;*/
-    min-height: 32px;
-    max-height: 32px;
+    max-height: 45px;
     text-overflow: ellipsis;
     overflow: hidden;
     color: #304269;
@@ -36,7 +34,7 @@
 }
 
 .placesList_stars {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .placesList_info_row {
@@ -64,25 +62,29 @@
 
 .placesList_info_position_tags {
     font-size: 12px;
-    height: 24px;
-    min-height: 24px;
-    line-height: 12px;
+    margin-bottom: 8px;
 }
 
 .placesList_info_position_loc {
     font-size: 14px;
-height: 40px;
-    min-height: 40px;
-    line-height: 14px;
-
 }
 
 .placesList_info_position_textStyle {
     margin-left: 5px;
-    line-height: 16px;
     width: 90%;
     white-space: nowrap;
     overflow: hidden;
+}
+
+.placesList_info_position_loc .placesList_info_position_textStyle {
+    padding-left: 18px;
+    margin-left: 0px;
+    width: 90%;
+    white-space: nowrap;
+    overflow: hidden;
+    background: url(../media/geo_icon.svg) no-repeat;
+    background-size: 14px 14px;
+    background-position: left center;
 }
 
 .placesList_readMoreButton {
@@ -156,12 +158,12 @@ height: 40px;
         background-size: 10px 10px;
         background-position: right 5px center;
     }
-	
-	.placesList_placeName {
-    font-size: 20px;
-    line-height: 16px;
-    font-weight: 500;
-
-}
-	
+    .placesList_placeName {
+        font-size: 20px;
+        line-height: 22px;
+        font-weight: 500;
+    }
+    .placesList_info_position_loc .placesList_info_position_textStyle {
+        width: 100%;
+    }
 }
