--- a/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
@@ -14,8 +14,8 @@
     font-weight: 500;
     text-align: left;
     color: #304269;
-	padding-left:0px;
-	padding-top:3px;
+    padding-left: 0px;
+    padding-top: 3px;
 }
 
 .block_element_infoBlock_element {
@@ -34,11 +34,13 @@
 
 @media (max-width: 990px) {
     .block_element_infoBlock {
-        justify-content: space-between;
-        height: 100%;
-        padding-left:20px;
-        color: #304269;
+        padding-left: 20px;
     }
 }
 
-@media (max-width: 586px) {}
+@media (max-width: 386px) {
+    .block_element_infoBlock {
+        padding: 0px;
+        padding-left: 15px;
+    }
+}
