--- a/src/components/manipulator/Manipulator.css
+++ b/src/components/manipulator/Manipulator.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    /*height: 190px;*/
+    height: 140px;
     padding: 0 0 20px 0;
 }
 
