--- a/src/components/registration/ForgotPassword.css
+++ b/src/components/registration/ForgotPassword.css
@@ -26,6 +26,24 @@
     padding: 20px 0 20px 0;
 }
 
+.forgotPasswordContent span1 {
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.6);
+    padding-bottom: 30px;
+    margin: 0px;
+    text-align: center;
+}
+
+.forgotPasswordContent p {
+    font-size: 14px;
+    font-weight: 400;
+    color: #f60;
+    padding: 30px 0;
+    margin: 0px;
+    text-align: center;
+}
+
 .forgotPasswordContent .forgotPasswordContentSpanText {
     font-size: 12px;
     font-weight: 400;
