--- a/src/components/startTravelForm/StartTravelSuccess.css
+++ b/src/components/startTravelForm/StartTravelSuccess.css
@@ -33,6 +33,7 @@
     margin: 0 auto;
     font-size: 16px;
     font-weight: 400;
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .success_continueButton {
@@ -41,9 +42,14 @@
     width: 180px;
     height: 50px;
     border-radius: 5px;
-    background-color: #ff6600;
-    border-color: #ff6600;
+    background-color: #304269;
+    border: none;
     color: #ffffff;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
+}
+
+.success_continueButton:hover {
+    background-color: #f60;
 }
 
 .success_continueButton_value {
