fix css and add page

--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -81,7 +81,7 @@
     margin-right: 10px;
     outline: none;
     border: none;
-    background: url(../media/menu-button-White.svg) no-repeat;
+    background: url(../media/menu.svg) no-repeat;
     background-size: 100% 100%;
     cursor: pointer;
 }
