--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -25,8 +25,13 @@ html {
     cursor: pointer;
 }
 
+.footerButtons_button:hover {
+    color: #f60;
+    text-decoration: none;
+}
+
 .footerButtonsIcon img {
-    margin-right: 10px;
+    margin-left: 10px;
     cursor: pointer;
 }
 
