--- a/src/components/driverProfileRegistration/DriverProfileFeedback.css
+++ b/src/components/driverProfileRegistration/DriverProfileFeedback.css
@@ -39,6 +39,14 @@
     border-bottom: 1px solid #cccccc;
 }
 
+.commentBlock_noCommentsText{
+    position: relative;
+    /* height: 15%; */
+    width: 100%;
+    padding: 25px 15px;
+    border-bottom: 1px solid #cccccc;
+}
+
 .commentBlock_picture img {
     border-radius: 50%;
     object-fit: cover;
