add page contact

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -77,6 +77,10 @@ html {
     text-decoration: none;
 }
 
+.footerMobile a:hover {
+    text-decoration: none;
+}
+
 .footerMobile-activeInput {
     display: none !important;
 }
