--- a/src/components/RouteDescription/RouteDescription.css
+++ b/src/components/RouteDescription/RouteDescription.css
@@ -6,7 +6,7 @@
 
 .routeTravelBlock_pointPart {
     margin-top: 15px;
-    box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25); */
     border-radius: 5px;
 }
 
@@ -29,15 +29,31 @@
 .routeTravelBlock_pointValue {
     width: 100%;
     /*margin-bottom: 15px;*/
-    padding: 10px;
-    box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.25);
+    padding: 5px 10px;
+    border: 1px solid #ededed;
     border-radius: 5px;
+    /* box-shadow: 0 0 6px 0px rgba(0, 0, 0, 0.25); */
+    /* box-shadow: 0px 4px 2px 1px rgba(0, 0, 0, 0.25); */
+    transition: all 0.2s;
+}
+
+.specialDate.routeTravelBlock_pointValue:hover {
+    box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.25);
+}
+
+.routeTravelBlock_pointValue:first-child {
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .routeTravelBlock_height {
     min-height: 41px;
     max-height: 41px;
     overflow: hidden;
+}
+
+.routeTravelBlock_height div {
+    color: rgba(0, 0, 0, 0.5);
+    white-space: nowrap;
 }
 
 .routeDescription_topImageMask {
