--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
@@ -355,10 +355,14 @@ span.newTourDatepickerSpan {
     font-weight: 400;
     font-size: 14px;
     color: #304269;
-    text-indent: 20px;
+    padding: 8.5px 15px;
+    padding-left: 25px;
     background: url(../media/calendarGray.svg)no-repeat;
     background-size: 14px 14px;
-    background-position: top 2px left 10px;
+    background-position: center left 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-decoration: none;
 }
 
 span.newTourDatepickerSpan:hover {
