--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
@@ -21,7 +21,6 @@
     margin-bottom: 0px;
 }
 
-
 .tripSettingsContent select {
     font-weight: 400;
     font-size: 14px;
@@ -29,18 +28,16 @@
 }
 
 div.tripSettingsContentTitle {
-   
-    padding-top:10px;
+    padding-top: 10px;
 }
 
-.tripSettingsContentTitle  {
+.tripSettingsContentTitle {
     font-weight: 500;
     font-size: 16px;
     color: #304269;
     margin-bottom: 0px;
-    text-transform:uppercase;
-    padding-bottom:20px!important;
-    padding-top:25px!important;
+    padding-bottom: 20px!important;
+    padding-top: 15px!important;
 }
 
 .tripSettingsContentP p {
@@ -61,13 +58,13 @@ div.tripSettingsContentTitle {
 }
 
 .tripSettingsContent input {
-    color: #333;
+    color: rgb(0, 0, 0, 0.6);
     font-weight: 400;
     font-size: 14px;
     border-radius: 5px;
     border: 1px solid #ccc;
     padding-left: 10px;
-    margin: 5px 0;
+    margin: 5px 10px;
     min-width: 130px;
     min-height: 40px;
     transition: all 0.3s;
@@ -126,6 +123,12 @@ div.tripSettingsContentAddCity p {
     background-position: top 0px left 10px;
 }
 
+div.tripSettingsContentAddCity {
+    font-size: 14px;
+    color: #304269;
+    font-weight: 400;
+}
+
 div.tripSettingsContentAddCity p:hover {
     color: #f60;
 }
@@ -138,7 +141,6 @@ div.tripSettingsContentAddCity p:hover {
     color: #fff;
     font-weight: 500;
     font-size: 16px;
-    margin-left: 10px;
     background: #304269;
     border-radius: 5px;
     border: none;
@@ -152,14 +154,14 @@ div.tripSettingsContentAddCity p:hover {
 .tripSettingsContent button:focus {
     outline: none;
 }
-.closetext
-{
 
+.closetext {
     font-weight: 400!important;
     font-size: 14px!important;
     color: #686868!important;
     margin-bottom: 0px!important;
 }
+
 
 /* .tripSettingsContentDate {} */
 
@@ -175,6 +177,7 @@ div.tripSettingsContentAddCity p:hover {
         border: none;
         border-radius: 0px;
         border-bottom: 1px solid #ccc;
+        margin: 5px;
     }
     .tripSettingsContent select:hover,
     .tripSettingsContent select:focus,
@@ -199,39 +202,26 @@ div.tripSettingsContentAddCity p:hover {
 }
 
 @media (max-width: 768px) {
-
     .tripSettingsContent {
         padding: 5px 0px 0px 0px;
         transition: all 0.3s;
     }
-
-
     .tripSettingsContent input {
-        min-height:0;
-
+        min-height: 0;
     }
-
-    .triplabel
-    {
-    padding-top:20px!important;
+    .triplabel {
+        padding-top: 20px!important;
     }
-
-    .tripSettingsContentTitle
-    {
+    .tripSettingsContentTitle {
         text-align: center;
     }
-
     .dailymile {
-        display:none;
+        display: none;
     }
-    .tripname
-    {
-        padding-bottom:0px!important;
+    .tripname {
+        padding-bottom: 0px!important;
     }
-.tripSettingsContentP
-{
-    padding-bottom:20px;
+    .tripSettingsContentP {
+        padding-bottom: 20px;
+    }
 }
-    
-    }
-
