--- a/src/components/manipulator/Manipulator.css
+++ b/src/components/manipulator/Manipulator.css
@@ -103,6 +103,7 @@
 
 .numberPosition_numberBlock {
     display: flex;
+    justify-content: center;
     height: 100%;
     width: 20%;
     padding: 0 5%;
