--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -270,28 +270,141 @@
 .burgerMenuBg {
     width: 100%;
     height: 100%;
+    padding-bottom: 60px;
+    background: #f5f5f5;
+    overflow-y: scroll;
 }
 
 .burgerMenuTop {
     width: 100%;
-    height: 12%;
-    background: #fff;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+}
+
+.burgerMenuBlock .profile {
+    width: 100%;
+    background: url(../media/man-user-Gray.svg)no-repeat;
+    background-size: 22px 22px;
+    background-position: center right 20px;
+}
+
+.burgerMenuBlock {
+    background: #fff;
+    box-shadow: 0 0 4px 0px rgba(0, 0, 0, 0.2);
+    padding: 10px 0!important;
+}
+
+.burgerMenuP.burgerMenuBlock {
+    padding: 10px !important;
+    padding-top: 0px !important;
+}
+
+.burgerMenuBlock label {
+    font-size: 14px;
+    font-weight: 400;
+    color: #686868;
+}
+
+.burgerMenuBlock .routes {
+    background: url(../media/geo_icon.svg)no-repeat;
+    background-size: 20px 20px;
+    background-position: center right 20px;
+}
+
+.burgerMenuBlock .tours {
+    background: url(../media/front-bus-Gray.svg)no-repeat;
+    background-size: 20px 20px;
+    background-position: center right 20px;
+}
+
+.burgerMenuBlock .places {
+    background: url(../media/rate-star-Gray.svg)no-repeat;
+    background-size: 20px 20px;
+    background-position: center right 20px;
+}
+
+.burgerMenuBlock .timetable {
+    background: url(../media/timetable.svg)no-repeat;
+    background-size: 25px 25px;
+    background-position: center right 17px;
+}
+
+.burgerMenuBlock .settingsGears {
+    background: url(../media/settings-gears.svg)no-repeat;
+    background-size: 25px 25px;
+    background-position: center right 15px;
+}
+
+.burgerMenuBlock .saveMoney {
+    background: url(../media/save-money.svg)no-repeat;
+    background-size: 30px 30px;
+    background-position: center right 15px;
+}
+
+.burgerMenuBlock .exit {
+    background: url(../media/exit.svg)no-repeat;
+    background-size: 22px 22px;
+    background-position: center right 18px;
+}
+
+.burgerMenuBlock .logoIcon {
+    background: url(../media/logo-blue.svg)no-repeat;
+    background-size: 25px 25px;
+    background-position: center right 15px;
+}
+
+.burgerMenuBlock .partner {
+    background: url(../media/partner.svg)no-repeat;
+    background-size: 30px 30px;
+    background-position: center right 12px;
+}
+
+.burgerMenuBlock .contract {
+    background: url(../media/contract.svg)no-repeat;
+    background-size: 25px 25px;
+    background-position: center right 12px;
+}
+
+.burgerMenuBlock .questionMarkGray {
+    background: url(../media/question-markGray.svg)no-repeat;
+    background-size: 25px 25px;
+    background-position: center right 15px;
+}
+
+.burgerMenuBlock .phoneBook {
+    background: url(../media/phone-book.svg)no-repeat;
+    background-size: 25px 25px;
+    background-position: center right 15px;
+}
+
+.burgerMenuTop h4 {
+    font-size: 18px;
+    font-weight: 400;
+    color: #304269;
+    margin-bottom: 0;
+}
+
+.burgerMenuTop a {
+    width: 100%;
+    font-size: 14px;
+    padding: 10px 10px;
+    font-weight: 400;
+    color: #686868;
+    background-size: 10px 10px;
 }
 
 .burgerMenuTop span {
+    width: 100%;
     font-size: 14px;
+    padding: 10px 10px;
     font-weight: 400;
-    color: #304269;
-    padding-left: 10px;
+    color: #686868;
     background-size: 10px 10px;
 }
 
 .burgerMenuTopDropDown {
-    width: 109px !important;
+    width: 100px !important;
 }
 
 .burgerMenuTopDropDown div {
@@ -299,14 +412,20 @@
     padding-left: 10px !important;
     font-size: 14px !important;
     font-weight: 400 !important;
-    color: #304269 !important;
+    color: #686868 !important;
+    border-top: none !important;
+}
+
+.burgerMenuTopDropDown button {
+    width: 36px !important;
 }
 
 .burgerMenuTopDropDownSpan {
     font-size: 14px !important;
-    padding-left: 2px;
+    padding-left: 5px !important;
+    margin-right: 15px !important;
     font-weight: 400 !important;
-    color: #304269 !important;
+    color: #686868 !important;
 }
 
 
