--- a/src/components/home/FirstEnterModal.css
+++ b/src/components/home/FirstEnterModal.css
@@ -60,10 +60,10 @@
     position: relative;
     height: 75%;
     /* scroll-snap-type: x proximity; */
-    scroll-snap-type: x mandatory;
-    scroll-snap-points-x: repeat(100%);
-    scroll-snap-destination: 100% 0;
-    overflow-x: scroll;
+    /* scroll-snap-type: x mandatory; */
+    /* scroll-snap-points-x: repeat(100%);
+    scroll-snap-destination: 100% 0; */
+    overflow-x: hidden;
     overflow-y: hidden;
     /* scroll-behavior: smooth; */
 }
