--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -57,7 +57,7 @@
     position: relative;
     width: 100%;
     box-shadow: 0 0 1px 1px rgba(221, 221, 221, 1);
-    padding: 12px 23px;
+    padding: 10px 7px;
     margin-bottom: 12px;
     border-radius: 5px;
 }
@@ -253,6 +253,9 @@ label {
         top: 0px;
         background: #fff;
         z-index: 10;
+    }
+    .valueBlock_commentary{
+        max-height: none;
     }
 }
 
