--- a/src/components/driverProfileRegistration/DriverProfileFeedback.css
+++ b/src/components/driverProfileRegistration/DriverProfileFeedback.css
@@ -43,7 +43,8 @@
     position: relative;
     /* height: 15%; */
     width: 100%;
-    padding: 25px 15px;
+    padding: 10px 5px;
+    text-align:center;
     border-bottom: 1px solid #cccccc;
 }
 
