--- a/src/components/RouteDescription/RouteDescription.css
+++ b/src/components/RouteDescription/RouteDescription.css
@@ -26,7 +26,6 @@
     padding-right: 10px!important;
 }
 
-
 .routeTravelBlock_pointValue {
     width: 100%;
     /*margin-bottom: 15px;*/
@@ -37,19 +36,25 @@
     /* box-shadow: 0px 4px 2px 1px rgba(0, 0, 0, 0.25); */
     transition: all 0.2s;
     background: #f7f7f7;
-    
 }
 
 @keyframes glowing {
-    0% {     background: rgba(34,157,78,.49); }
-    50% {     background:#fff;}
-    100% {     background: rgba(34,157,78,.49);}
-  }
+    0% {
+        background: rgba(34, 157, 78, .49);
+    }
+    50% {
+        background: #fff;
+    }
+    100% {
+        background: rgba(34, 157, 78, .49);
+    }
+}
 
-.anidate  {
+
+/* .anidate  {
     animation: glowing 2000ms infinite;
     cursor:pointer;
-  }
+  } */
 
 .specialDate.routeTravelBlock_pointValue:hover {
     box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.25);
