--- a/src/components/home/HomeBody/RouteMenu.css
+++ b/src/components/home/HomeBody/RouteMenu.css
@@ -48,19 +48,20 @@
 
 @keyframes glowing {
     0% {
-        background: rgba(34, 157, 78, .49);
+        background: rgba(37, 165, 154, 0.911);
+        border: 1px solid rgba(255, 255, 255, 0.3);
     }
     50% {
-        background: rgba(255, 255, 255, 0.3);
-        ;
+        background: none;
     }
     100% {
-        background: rgba(34, 157, 78, .49);
+        background: rgba(37, 165, 154, 0.911);
+        border: 1px solid rgba(255, 255, 255, 0.3);
     }
 }
 
 .routemenu_date-Check {
-    animation: glowing 2000ms infinite;
+    animation: glowing 2s infinite;
     cursor: pointer;
 }
 
@@ -295,9 +296,10 @@
 .startCity-CheckInput {
     /* outline: 2px solid rgb(37, 165, 154);
     outline-offset: -1px; */
-    animation: glowing 2000ms infinite;
+    animation: glowing 2s infinite;
     /* background: rgba(37, 165, 154, 0.911)!important; */
     border-radius: 5px !important;
+    /* transition: all 1s; */
 }
 
 .startCity-CheckInput.classDivMobail i {
@@ -538,5 +540,19 @@ p.routemenu_search_text {
     }
     .city_input::placeholder {
         color: #686868;
+    }
+    @keyframes glowing {
+        0% {
+            background: rgba(37, 165, 154, 0.911);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+        }
+        50% {
+            background: #304269;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+        }
+        100% {
+            background: rgba(37, 165, 154, 0.911);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+        }
     }
 }
