--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -186,6 +186,7 @@ h2 {
     -webkit-transition: all .2s;
     transition: all .2s;
     height: 53px;
+    background: #f7f7f7;
 }
 
 .placesDescription_travelBlock_element ::-webkit-input-placeholder {
@@ -211,6 +212,7 @@ h2 {
     border: none;
     outline: none;
     color: #686868;
+    background: #f7f7f7;
 }
 
 .placeDescrDate {
