--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -83,10 +83,12 @@
     height: 33%;
 } */
 
-.createComment_picture {
-    height: 60px;
-    width: 60px;
-    border-radius: 30px;
+.createComment_picture img{
+    max-height: 60px;
+    min-height: 50px;
+    max-width: 60px;
+    min-width: 50px;
+    border-radius: 50%;
 }
 
 .createComment_picture img {
