--- a/src/components/drivers/Drivers.css
+++ b/src/components/drivers/Drivers.css
@@ -1,9 +1,9 @@
 .drivers_top_background {
     top: 0;
     /*width: 100%;*/
-    background: url(pictures/tbs_4.jpg) no-repeat 100%;
-    background-size: cover;
-    background-position: center center;
+    /* background: url(pictures/tbs_4.jpg) no-repeat 100%; */
+    background-size: cover !important;
+    background-position: center center !important;
     /* object-fit: cover; */
     padding-bottom: 50px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
