--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,7 +1,7 @@
 .home_window {
-    background: url(../media/tbs_4.jpg) no-repeat;
-    background-size: cover;
-    background-position: center center;
+    /* background: url(../media/tbs_4.jpg) no-repeat; */
+    background-size: cover !important;
+    background-position: center center !important;
 }
 
 .home_block {
