--- a/src/components/home/text.css
+++ b/src/components/home/text.css
@@ -6,6 +6,7 @@
     text-transform: uppercase;
     min-height: 40px;
     margin-top: 81px;
+    margin-bottom: 0px;
     padding-bottom: 10px;
     padding-top: 20px;
     background: rgba(48, 66, 105, 0.9);
