--- a/src/components/registration/customerCancel.css
+++ b/src/components/registration/customerCancel.css
@@ -1,5 +1,50 @@
-.feedbackbackground {
-    background: #fff;
-    padding: 20px;
-    margin-bottom: 30%;
+.customerCancelForm{
+    background: rgba(255, 255, 255, 0.8);
+    padding: 30px 20px !important;
+    margin-bottom: 35% !important;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
+}
+
+.customerCancelForm h2{
+    margin-bottom: 25px;
+    font-size: 26px !important;
+    font-weight: 400;
+    color: #304269;
+}
+
+.customerCancelForm text{
+    margin-top: 25px;
+    font-size: 13px;
+    font-weight: 400;
+    text-align: center;
+}
+
+
+.customerCancelForm span{
+    background: #304269;
+    padding: 10px 40px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s;
+    font-size: 16px ;
+    font-weight: 400;
+    color: #fff;
+}
+.customerCancelForm span:first-child{
+    background: #686868;
+    padding: 10px 40px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s;
+    font-size: 16px ;
+    font-weight: 400;
+    color: #fff;
+}
+.customerCancelForm span:hover{
+    background: #f60;
+}
+
+.customerCancelForm span:first-child:hover {
+    background: rgb(201, 82, 3);
 }
