--- a/src/components/registration/customerCancel.css
+++ b/src/components/registration/customerCancel.css
@@ -20,6 +20,21 @@
     text-align: center;
 }
 
+.customerCancelForm a {
+    background: #304269;
+    padding: 10px 40px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s;
+    font-size: 16px ;
+    font-weight: 400;
+    color: #fff;
+}
+
+.customerCancelForm a:hover{
+    background: #f60;
+    text-decoration: none;
+}
 
 .customerCancelForm span{
     background: #304269;
@@ -47,4 +62,22 @@
 
 .customerCancelForm span:first-child:hover {
     background: rgb(201, 82, 3);
+}
+
+@media(max-width: 500px){
+    .customerCancelForm{
+        padding: 30px 10px !important;
+        margin-bottom: 55% !important;
+    }
+    .customerCancelForm h2{
+        margin-bottom: 25px;
+        font-size: 20px !important;
+        text-align: center;
+    }
+    .customerCancelForm span{
+        padding: 10px 30px;
+    }
+    .customerCancelForm span:first-child{
+        padding: 10px 30px;
+    }
 }
