--- a/src/components/registration/ForgotPassword.css
+++ b/src/components/registration/ForgotPassword.css
@@ -17,6 +17,7 @@
     background: rgba(255, 255, 255, 0.9);
     height: 30%;
     margin-top: 10%;
+    padding: 20px !important;
 }
 
 .forgotPasswordContent span {
