--- a/src/components/UserProfile/UserProfileTrevelHistory.css
+++ b/src/components/UserProfile/UserProfileTrevelHistory.css
@@ -19,7 +19,8 @@
 .trevelHistoryBody img {
     cursor: pointer;
     z-index: 10;
-    width: 40px;
+    min-width: 40px;
+    max-width: 40px;
     height: 40px;
     margin-right: 5px;
     border-radius: 50%;
