--- a/src/components/registration/customerCancel.css
+++ b/src/components/registration/customerCancel.css
@@ -1,7 +1,7 @@
 .customerCancelForm{
     background: rgba(255, 255, 255, 0.8);
     padding: 30px 20px !important;
-    margin-bottom: 35% !important;
+    /*margin-bottom: 35% !important;*/
     border-radius: 5px;
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
 }
