--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -435,6 +435,11 @@ h2 {
         padding-left: 15px;
     }
 
+    .routeDescrDate input,
+.placeDescrDate input {
+    margin-top: 0px;
+}
+
     .placePhotos_elementBlock {
         margin: 0px 0;
         position: relative;
