fix bug add share links

--- a/src/components/FooterPage/aboutService.css
+++ b/src/components/FooterPage/aboutService.css
@@ -6,8 +6,7 @@
 }
 
 .aboutService_Title {
-    background: url(../media/phone.png)no-repeat;
-    background-position: right 20% bottom;
+    background-position: right 20% bottom !important;
 }
 
 .aboutService_Title h2 {
