--- a/src/components/driverProfileRegistration/DriverProfileAffiliateProgram.css
+++ b/src/components/driverProfileRegistration/DriverProfileAffiliateProgram.css
@@ -101,7 +101,36 @@
 .affiliateProgramIconsMass {
     padding-top: 5px;
     width: 70%;
+    overflow-x: scroll;
 }
+
+.networkLink{
+    text-align: center;
+    margin: 5px;
+}
+
+
+
+.affiliateProgramIconsMass::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    background-color: #F5F5F5;
+}
+
+
+.affiliateProgramIconsMass::-webkit-scrollbar {
+    height: 5px;
+    width: 4px;
+    background-color: #F5F5F5;
+}
+
+
+.affiliateProgramIconsMass::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3); */
+    background-color: #f60;
+}
+
 
 .affiliateProgramIconsMass i {
     cursor: pointer;
