--- a/src/components/manipulator/Manipulator.css
+++ b/src/components/manipulator/Manipulator.css
@@ -114,7 +114,7 @@
 .numberPosition_numberBlock_value {
     float: left;
     height: 100%;
-    width: 20px;
+    /* width: 20px; */
     text-align: center;
     line-height: 100%;
     font-weight: 400;
