--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,11 @@ body {
     margin-left: -10px !important;
     margin-right: -10px !important;
 }
-#omni_widget_iframe_3112-5mvjsjtu{
+
+#omni_widget_iframe_3112-5mvjsjtu {
     right: 20px !important;
     bottom: 100px !important;
-    z-index: 30 !important; 
+    z-index: 30 !important;
 }
 
 .col,
@@ -275,11 +276,21 @@ body {
     }
 }
 
-@media (max-width: 450px) {
-#omni_widget_iframe_3112-5mvjsjtu{
-    right: 8px !important;
-    bottom: 63px !important;
+@media (min-width: 768px) {
+    .mr-md-2,
+    .mx-md-2 {
+        margin-right: .5rem !important;
+    }
+    .mt-md-0, .my-md-0 {
+        margin-top: 0!important;
+    }
 }
+
+@media (max-width: 450px) {
+    #omni_widget_iframe_3112-5mvjsjtu {
+        right: 8px !important;
+        bottom: 63px !important;
+    }
 }
 
 /*
